---
source: fortitude/src/rules/style/mod.rs
expression: diagnostics
snapshot_kind: text
---
./resources/test/fixtures/style/S242.f90:5:11: S242 [*] Avoidable escaped quotes
  |
3 |   implicit none (type, external)
4 |
5 |   print*, 'This isn''t necessary'
  |           ^^^^^^^^^^^^^^^^^^^^^^^ S242
6 |   print*, "This ""is not"" necessary"
7 |   print*, 'This "isn''t" unnecessary'
  |
  = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
2 2 |   use, intrinsic :: iso_c_binding, only: c_char
3 3 |   implicit none (type, external)
4 4 | 
5   |-  print*, 'This isn''t necessary'
  5 |+  print*, "This isn't necessary"
6 6 |   print*, "This ""is not"" necessary"
7 7 |   print*, 'This "isn''t" unnecessary'
8 8 |   print*, "This ""isn't"" unnecessary"

./resources/test/fixtures/style/S242.f90:6:11: S242 [*] Avoidable escaped quotes
  |
5 |   print*, 'This isn''t necessary'
6 |   print*, "This ""is not"" necessary"
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^ S242
7 |   print*, 'This "isn''t" unnecessary'
8 |   print*, "This ""isn't"" unnecessary"
  |
  = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
3 3 |   implicit none (type, external)
4 4 | 
5 5 |   print*, 'This isn''t necessary'
6   |-  print*, "This ""is not"" necessary"
  6 |+  print*, 'This "is not" necessary'
7 7 |   print*, 'This "isn''t" unnecessary'
8 8 |   print*, "This ""isn't"" unnecessary"
9 9 |   print*, 4_"Does this ""break""?"

./resources/test/fixtures/style/S242.f90:9:13: S242 [*] Avoidable escaped quotes
   |
 7 |   print*, 'This "isn''t" unnecessary'
 8 |   print*, "This ""isn't"" unnecessary"
 9 |   print*, 4_"Does this ""break""?"
   |             ^^^^^^^^^^^^^^^^^^^^^^ S242
10 |   print*, c_char_"Does this ''break''?"
11 |   print*, 'This &
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
6  6  |   print*, "This ""is not"" necessary"
7  7  |   print*, 'This "isn''t" unnecessary'
8  8  |   print*, "This ""isn't"" unnecessary"
9     |-  print*, 4_"Does this ""break""?"
   9  |+  print*, 4_'Does this "break"?'
10 10 |   print*, c_char_"Does this ''break''?"
11 11 |   print*, 'This &
12 12 |        &isn''t &

./resources/test/fixtures/style/S242.f90:11:11: S242 [*] Avoidable escaped quotes
   |
 9 |     print*, 4_"Does this ""break""?"
10 |     print*, c_char_"Does this ''break''?"
11 |     print*, 'This &
   |  ___________^
12 | |        &isn''t &
13 | |        &necessary'
   | |__________________^ S242
14 |     print*, 'This &
15 |          &""isn''t"" &
   |
   = help: Change outer quotes to avoid escaping inner quotes

ℹ Safe fix
8  8  |   print*, "This ""isn't"" unnecessary"
9  9  |   print*, 4_"Does this ""break""?"
10 10 |   print*, c_char_"Does this ''break''?"
11    |-  print*, 'This &
12    |-       &isn''t &
13    |-       &necessary'
   11 |+  print*, "This &
   12 |+       &isn't &
   13 |+       &necessary"
14 14 |   print*, 'This &
15 15 |        &""isn''t"" &
16 16 |        &unnecessary'
